# SimpleMailClient

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
app/: account_info.h  inc_default.h
app/cli/: CMakeLists.txt  app_cli.cpp  main.cpp
app/gui/: CMakeLists.txt  Timer.h  main.cpp  sendemail.cpp  sendemail.h  sendemailwidget.cpp  sendemailwidget.h
demos/: CMakeLists.txt
demos/demo2/: sendemail.ui
demos/myapp/: CMakeLists.txt  myapp.cpp
docs/: mail_config.ini  simpleMail用户需求定义.md  simpleMail用户需求定义.txt
